# python-jenkins

./: .bzrignore  .coveragerc  .gitignore  .gitreview  .pep8  .pre-commit-config.yaml  .zuul.yaml  COPYING  Makefile  README.md  README.rst  bindep.txt  jenkins.py  other-requirements.txt  requirements.txt  setup.cfg  setup.py  test-jenkins.py  test-requirements-py3.txt  test-requirements.txt  tox.ini
doc/: Makefile  conf.py  index.rst
doc/source/: api.rst  conf.py  contributing.rst  example.rst  examples.rst  index.rst  install.rst
jenkins/: __init__.py  configs.py  endpoints.py  exceptions.py  plugins.py  urllib_kerb.py
tests/: base.py  helper.py  test_build.py  test_credential.py  test_info.py  test_jenkins.py  test_jenkins_in_a_folder.py  test_jenkins_sockets.py  test_job_folder.py  test_jobs.py  test_kerberos.py  test_misc.py  test_node.py  test_node_script.py  test_plugins.py  test_promotion.py  test_queue.py  test_quiet_down.py  test_rest_endpoints.py  test_script.py  test_version.py  test_view.py  test_whoami.py
tests/jobs/: base.py  test_assert.py  test_build.py  test_config.py  test_copy.py  test_create.py  test_debug.py  test_delete.py  test_disable.py  test_enable.py  test_get.py  test_getall.py  test_info.py  test_name.py  test_reconfig.py  test_rename.py  test_set_next_build_number.py
tree_of_files/: about.md  build.md  config.md  database-monitoring.md
