[metadata]
name = python-jenkins
author = Ken Conley
author_email = kwc@willowgarage.com
maintainer = OpenStack
maintainer_email = openstack@lists.launchpad.net
description = Python bindings for the remote Jenkins API
license = BSD
home-page = https://github.com/stackforge/python-jenkins
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    jenkins

[pbr]
warnerrors = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
