[metadata]
name = python-jenkins
author = Ken Conley
author_email = kwc@willowgarage.com
summary = Python bindings for the remote Jenkins API
maintainer = OpenStack Infrastructure Team
maintainer_email = openstack@lists.launchpad.net
description-file = README.rst
license = BSD
home-page = http://git.openstack.org/cgit/stackforge/python-jenkins
classifier =
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    jenkins

[pbr]
warnerrors = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
